rename Blink to BlinkPre; fix size test

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "BlinkPrerelease"
+name = "BlinkPre"
 uuid = "ddcef938-a92f-4c70-8d64-592509aa1c26"
 authors = ["Alex Riss"]
 version = "0.1.0"
